[package]
name = "rusty_gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.27.0"
async-trait = "0.1.68"
webbrowser = "0.8.9"
strum = "0.25.0"
strum_macros = "0.25.3"
ai_functions = "0.1.1"